[gd_scene load_steps=2 format=3 uid="uid://d2qgtltsfneu3"]

[ext_resource type="Script" uid="uid://dabt4kjwccphv" path="res://game/ui/menus/board_editor_menu/board_editor_menu.gd" id="1_3dr6d"]

[node name="BoardEditorMenu" type="PanelContainer"]
offset_right = 395.0
offset_bottom = 472.0
script = ExtResource("1_3dr6d")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="CreateNewBoardContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BoardNameEntry" type="LineEdit" parent="VBoxContainer/CreateNewBoardContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
placeholder_text = "New board name"

[node name="CreateNewBoardButton" type="Button" parent="VBoxContainer/CreateNewBoardContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Create new board"

[node name="BoardListScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BoardList" type="VBoxContainer" parent="VBoxContainer/BoardListScrollContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/CreateNewBoardContainer/CreateNewBoardButton" to="." method="_on_create_new_board_button_pressed"]
